--- a/legend-pure-ide-light/src/main/web/src/index.html
+++ b/legend-pure-ide-light/src/main/web/src/index.html
@@ -17,14 +17,15 @@
 
 <html lang="en">
 
-  <head>
-    <title>Pure IDE</title>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300,400,500,700,900|Raleway:900|Source+Code+Pro&display=swap"
-          rel="stylesheet">
-  </head>
+<head>
+  <title>Pure IDE</title>
+  <meta charset="UTF-8">
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300,400,500,700,900|Raleway:900|Fira+Code:400,500&display=swap"
+    rel="stylesheet">
+</head>
 
-  <body style="width:100%;height:100vh">
-  </body>
+<body style="width:100%;height:100vh">
+</body>
 
 </html>
