--- a/legend-pure-ide-light/src/main/web/src/index.html
+++ b/legend-pure-ide-light/src/main/web/src/index.html
@@ -20,8 +20,13 @@
 <head>
   <title>Pure IDE</title>
   <meta charset="UTF-8">
+  <!--
+    Attempt to preconnect to font registry for faster load and always prefer <link> (non-blocking) to CSS @import (blocking)
+    See https://stackoverflow.com/questions/12316501/including-google-web-fonts-link-or-import
+  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300,400,500,700,900|Raleway:900|Fira+Code:400,500&display=swap"
+    href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300,400,500,700,900|Raleway:900|Roboto+Mono:400,700&display=swap"
     rel="stylesheet">
 </head>
 
