--- a/legend-pure-ide-light/src/main/web/packages/legend-pure-ide-deployment/src/index.html
+++ b/legend-pure-ide-light/src/main/web/packages/legend-pure-ide-deployment/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Legend Query</title>
+    <title>Legend Pure IDE</title>
     <meta charset="UTF-8" />
   </head>
 
